feat: add cert-manager

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -6,3 +6,4 @@ metadata:
     namespace: flux-system
 stringData:
     SECRET_DOMAIN: $BOOTSTRAP_DOMAIN
+    SECRET_CLOUDFLARE_EMAIL: $BOOTSTRAP_CLOUDFLARE_EMAIL
