feat: add wildcard cert

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -6,4 +6,5 @@ metadata:
     namespace: flux-system
 stringData:
     SECRET_DOMAIN: $BOOTSTRAP_DOMAIN
+    SECRET_DOMAIN_CERT: $BOOTSTRAP_DOMAIN_CERT
     SECRET_CLOUDFLARE_EMAIL: $BOOTSTRAP_CLOUDFLARE_EMAIL
