--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -19,7 +19,7 @@
     {
       "fileMatch": [
         "cluster/.+helm-release\\.yaml$",
-        "cluster/.+crd\\.yaml$"
+        "cluster/core/crds/.+\\.yaml$"
       ],
       "matchStrings": [
         // helm releases
