fix: change externalIP to loadBalancerIP in ingress nginx

--- a/cluster/apps/networking/ingress-nginx/helm-release.yaml
+++ b/cluster/apps/networking/ingress-nginx/helm-release.yaml
@@ -22,11 +22,8 @@ spec:
       replicaCount: 1
       service:
         type: LoadBalancer
-        externalIPs:
-        - "${INGRESS_NGINX_LB}"
+        loadBalancerIP: "${INGRESS_NGINX_LB}"
         externalTrafficPolicy: Local
-      publishService:
-        enabled: true
       config:
         ssl-protocols: "TLSv1.3 TLSv1.2"
         proxy-body-size: "100m"
