--- a/cluster/core/metallb-system/helm-release.yaml
+++ b/cluster/core/metallb-system/helm-release.yaml
@@ -3,9 +3,8 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: metallb
-  namespace: networking
+  namespace: metallb-system
 spec:
-  interval: 5m
   chart:
     spec:
       chart: metallb
@@ -14,7 +13,6 @@ spec:
         kind: HelmRepository
         name: bitnami-charts
         namespace: flux-system
-      interval: 10m
   values:
     controller:
       image:
