--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,6 +23,6 @@ repos:
   hooks:
   - id: fix-smartquotes
 - repo: https://github.com/k8s-at-home/sops-pre-commit
-  rev: v1.1.0
+  rev: v2.0.0
   hooks:
-  - id: sops-encrypted-check
+  - id: forbid-secrets
