fix: add interval back

--- a/cluster/core/cert-manager/helm-release.yaml
+++ b/cluster/core/cert-manager/helm-release.yaml
@@ -5,6 +5,7 @@ metadata:
   name: cert-manager
   namespace: cert-manager
 spec:
+  interval: 5m
   chart:
     spec:
       # renovate: registryUrl=https://charts.jetstack.io/
