fix: sops regex

--- a/tmpl/.sops.yaml
+++ b/tmpl/.sops.yaml
@@ -1,6 +1,6 @@
 ---
 creation_rules:
-- encrypted_regex: '((?i)(pass|secret($|[^N])|key|token|^data$|^stringData))'
+- encrypted_regex: '^(data|stringData)$'
   pgp: >-
     $FLUX_KEY_FP,
     $PERSONAL_KEY_FP
