fix: github actions username

--- a/.github/workflows/flux-schedule.yaml
+++ b/.github/workflows/flux-schedule.yaml
@@ -35,10 +35,9 @@ jobs:
         branch: "flux/upgrade-${{ steps.upgrade.outputs.flux_version }}"
         delete-branch: true
         title: "chore(deps): upgrade flux components to ${{ steps.upgrade.outputs.flux_version }}"
-        signoff: true
-        committer: "Devin Buhl <onedr0p@users.noreply.github.com>"
-        author: "Devin Buhl <onedr0p@users.noreply.github.com>"
-        assignees: "onedr0p"
+        signoff: false
+        committer: GitHub <noreply@github.com>
+        author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
         commit-message: "chore(deps): upgrade flux components to ${{ steps.upgrade.outputs.flux_version }}"
         body: |
           Release notes: https://github.com/fluxcd/flux2/releases/tag/${{ steps.upgrade.outputs.flux_version }}
