feat: switch to token auth for cloudflare and migrate to https for git repo

--- a/cluster/core/cert-manager/letsencrypt-production.yaml
+++ b/cluster/core/cert-manager/letsencrypt-production.yaml
@@ -13,6 +13,6 @@ spec:
     - dns01:
         cloudflare:
           email: "${SECRET_CLOUDFLARE_EMAIL}"
-          apiKeySecretRef:
+          apiTokenSecretRef:
             name: cloudflare-token-secret
             key: cloudflare-token
