--- a/tmpl/gotk-sync.yaml
+++ b/tmpl/gotk-sync.yaml
@@ -8,9 +8,7 @@ spec:
   interval: 1m0s
   ref:
     branch: main
-  secretRef:
-    name: flux-system
-  url: ssh://git@github.com/$BOOTSTRAP_GITHUB_REPOSITORY
+  url: $BOOTSTRAP_GITHUB_REPOSITORY
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
