fix: use brackets in bootstrap vars

--- a/tmpl/cluster-secrets.yaml
+++ b/tmpl/cluster-secrets.yaml
@@ -5,6 +5,6 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: $BOOTSTRAP_DOMAIN
-    SECRET_DOMAIN_CERT: $BOOTSTRAP_DOMAIN_CERT
-    SECRET_CLOUDFLARE_EMAIL: $BOOTSTRAP_CLOUDFLARE_EMAIL
+    SECRET_DOMAIN: ${BOOTSTRAP_DOMAIN}
+    SECRET_DOMAIN_CERT: ${BOOTSTRAP_DOMAIN_CERT}
+    SECRET_CLOUDFLARE_EMAIL: ${BOOTSTRAP_CLOUDFLARE_EMAIL}
