--- a/tmpl/cluster-settings.yaml
+++ b/tmpl/cluster-settings.yaml
@@ -5,5 +5,5 @@ metadata:
   name: cluster-settings
   namespace: flux-system
 data:
-  METALLB_LB_RANGE: $BOOTSTRAP_METALLB_LB_RANGE
-  INGRESS_NGINX_LB: $BOOTSTRAP_INGRESS_NGINX_LB
+  METALLB_LB_RANGE: ${BOOTSTRAP_METALLB_LB_RANGE}
+  INGRESS_NGINX_LB: ${BOOTSTRAP_INGRESS_NGINX_LB}
