--- a/tmpl/.sops.yaml
+++ b/tmpl/.sops.yaml
@@ -2,5 +2,5 @@
 creation_rules:
 - encrypted_regex: '^(data|stringData)$'
   pgp: >-
-    $FLUX_KEY_FP,
-    $PERSONAL_KEY_FP
+    ${FLUX_KEY_FP},
+    ${PERSONAL_KEY_FP}
