--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -18,8 +18,7 @@
     // regexManager to read and process HelmReleases and CRDs
     {
       "fileMatch": [
-        "cluster/.+helm-release\\.yaml$",
-        "cluster/core/crds/.+\\.yaml$"
+        "cluster/.+\\.yaml$"
       ],
       "matchStrings": [
         // helm releases
