--- a/cluster/apps/default/homer/helm-release.yaml
+++ b/cluster/apps/default/homer/helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      # renovate: registryUrl=https://kubernetes.github.io/homer
+      # renovate: registryUrl=https://k8s-at-home.com/charts/
       chart: homer
       version: 4.2.0
       sourceRef:
