--- a/cluster/apps/networking/wildcard-certificate/certificate.yaml
+++ b/cluster/apps/networking/wildcard-certificate/certificate.yaml
@@ -2,10 +2,10 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: "${SECRET_DOMAIN_CERT}"
+  name: "${SECRET_DOMAIN/./-}"
   namespace: networking
 spec:
-  secretName: "${SECRET_DOMAIN_CERT}-tls"
+  secretName: "${SECRET_DOMAIN/./-}-tls"
   issuerRef:
     name: letsencrypt-production
     kind: ClusterIssuer
