--- a/cluster/apps/system-upgrade/kustomization.yaml
+++ b/cluster/apps/system-upgrade/kustomization.yaml
@@ -1,7 +1,5 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- namespaces
-- metallb-system
-- cert-manager
-- system-upgrade
+- system-upgrade-controller
