--- a/cluster/apps/system-upgrade/system-upgrade-controller/kustomization.yaml
+++ b/cluster/apps/system-upgrade/system-upgrade-controller/kustomization.yaml
@@ -1,7 +1,6 @@
+---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- namespaces
-- metallb-system
-- cert-manager
-- system-upgrade
+- server-plan.yaml
+- agent-plan.yaml
