feat: break out crds into separate fluxcd/Kustomization

--- a/cluster/base/core.yaml
+++ b/cluster/base/core.yaml
@@ -6,6 +6,8 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
+  dependsOn:
+  - name: crds
   path: ./cluster/core
   prune: false
   sourceRef:
