--- a/cluster/base/flux-system/charts/helm/metallb-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/metallb-charts.yaml
@@ -5,5 +5,6 @@ metadata:
   name: metallb
   namespace: flux-system
 spec:
-  interval: 1h0m0s
+  interval: 30m
   url: https://metallb.github.io/metallb
+  timout: 2m
