feat: add go-task, set up prettier, format yaml (#50)

--- a/.github/lint/.yamllint.yaml
+++ b/.github/lint/.yamllint.yaml
@@ -1,10 +1,10 @@
 ignore: |
-  .github/
-  crds.yaml
+  *.sops.yaml
+  gotk-components.yaml
 extends: default
 rules:
   truthy:
-    allowed-values: ['true', 'false', 'on', 'yes']
+    allowed-values: ["true", "false", "on"]
   comments:
     min-spaces-from-content: 1
   line-length: disable
@@ -14,6 +14,4 @@ rules:
   brackets:
     min-spaces-inside: 0
     max-spaces-inside: 0
-  indentation:
-    spaces: 2
-    indent-sequences: consistent
+  indentation: enable
