feat: deploy metrics-server (#56)
* chore: update readme to not deploy metrics-server

* feat: add metrics-server kustomization

* feat: enable metrics server

* Update kustomization.yaml

* Update kustomization.yaml

* Update and rename lint.yaml to lint-markdown.yaml

* Create lint-shell.yaml

* Create lint.yaml

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -1,32 +1,29 @@
 ---
-name: Lint
+name: Lint YAML files on Pull Requests
 
 on: # yamllint disable-line rule:truthy
   pull_request:
+    paths:
+      - "**.yaml"
+      - "**.yml"
 
 jobs:
   yamllint:
     runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
-      - name: yamllint
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Get changes
+        uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          list-files: shell
+          filters: |
+            yaml:
+              - added|modified: "**.yaml"
+              - added|modified: "**.yml"
+      - name: Lint files
+        if: ${{ steps.filter.outputs.yaml == 'true' }}
         uses: reviewdog/action-yamllint@v1
         with:
-          yamllint_flags: "-c .github/lint/.yamllint.yaml ./cluster"
-  shellcheck:
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-      - name: shellcheck
-        uses: reviewdog/action-shellcheck@v1
-        with:
-          path: "./hack"
-          level: "error"
-  markdownlint:
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v2
-      - name: markdownlint
-        uses: reviewdog/action-markdownlint@v0.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          yamllint_flags: "-c .github/lint/.yamllint.yaml ${{ steps.filter.outputs.yaml_files }}"
