feat!: switch from ingress-nginx to traefik

--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -25,6 +25,7 @@ spec:
       namespaceSelector:
         matchNames:
           - default
+          - networking
       name: "you"
       customApps:
         - name: Some External Cluster Service
@@ -98,8 +99,9 @@ spec:
     ingress:
       main:
         enabled: true
-        ingressClassName: nginx
+        ingressClassName: "traefik"
         annotations:
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           hajimari.io/enable: "true"
           hajimari.io/icon: "weather-sunset"
         hosts:
