--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -1,9 +1,23 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - authentik-charts.yaml
   - bitnami-charts.yaml
+  - deliveryhero-charts.yaml
+  - descheduler-charts.yaml
+  - external-dns-charts.yaml
+  - grafana-charts.yaml
   - hajimari-charts.yaml
-  - ingress-nginx-charts.yaml
+  - infracloudio-charts.yaml
   - jetstack-charts.yaml
   - k8s-at-home-charts.yaml
   - metallb-charts.yaml
+  - minecraft-server-charts.yaml
+  - minio-charts.yaml
+  - nfs-subdir-external-provisioner-charts.yaml
+  - node-feature-discovery-charts.yaml
+  - prometheus-community-charts.yaml
+  - rook-ceph-charts.yaml
+  - stakater-charts.yaml
+  - traefik-charts.yaml
+  - weaveworks-kured-charts.yaml
