--- a/cluster/base/flux-system/charts/helm/node-feature-discovery-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/node-feature-discovery-charts.yaml
@@ -2,9 +2,9 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: ingress-nginx-charts
+  name: node-feature-discovery-charts
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://kubernetes.github.io/ingress-nginx
+  url: https://kubernetes-sigs.github.io/node-feature-discovery/charts
   timeout: 3m
