--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -101,9 +101,10 @@ spec:
         enabled: true
         ingressClassName: "traefik"
         annotations:
-          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+          cert-manager.io/cluster-issuer: "letsencrypt-production"
           hajimari.io/enable: "true"
           hajimari.io/icon: "weather-sunset"
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
         hosts:
           - host: "hajimari.${SECRET_DOMAIN}"
             paths:
@@ -112,6 +113,7 @@ spec:
         tls:
           - hosts:
               - "hajimari.${SECRET_DOMAIN}"
+            secretName: hajimari
     persistence:
       data:
         enabled: true
@@ -121,4 +123,6 @@ spec:
     resources:
       requests:
         cpu: 100m
-        memory: 128M
+        memory: 128Mi
+      limits:
+        memory: 256Mi
