Use global substring substitution for tls secret (#77)
* Use global substring substitution for tls secret

* Another global substring substitution for tls secret

--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -113,7 +113,7 @@ spec:
         tls:
           - hosts:
               - "hajimari.${SECRET_DOMAIN}"
-            secretName: "hajimari-${SECRET_DOMAIN/./-}-tls"
+            secretName: "hajimari-${SECRET_DOMAIN//./-}-tls"
     persistence:
       data:
         enabled: true
