fix: use non-templated secret name for certs
Signed-off-by: Devin Buhl <devin.kray@gmail.com>

--- a/cluster/apps/networking/traefik/dashboard/ingress.yaml
+++ b/cluster/apps/networking/traefik/dashboard/ingress.yaml
@@ -15,7 +15,7 @@ spec:
   tls:
     - hosts:
         - "traefik.${SECRET_DOMAIN}"
-      secretName: "traefik-dashboard-${SECRET_DOMAIN//./-}-tls"
+      secretName: "traefik-dashboard-tls"
   rules:
     - host: "traefik.${SECRET_DOMAIN}"
       http:
