--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -113,7 +113,7 @@ spec:
         tls:
           - hosts:
               - "hajimari.${SECRET_DOMAIN}"
-            secretName: "hajimari-${SECRET_DOMAIN//./-}-tls"
+            secretName: "hajimari-tls"
     persistence:
       data:
         enabled: true
