--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -5,12 +5,16 @@ vars:
   PROJECT_DIR:
     sh: "git rev-parse --show-toplevel"
   CLUSTER_DIR: "{{.PROJECT_DIR}}/cluster"
+  ANSIBLE_DIR: "{{.PROJECT_DIR}}/provision/ansible"
+  TERRAFORM_DIR: "{{.PROJECT_DIR}}/provision/terraform"
 
 env:
   KUBECONFIG: "{{.PROJECT_DIR}}/kubeconfig"
 
 includes:
+  ansible: .taskfiles/ansible.yml
   flux: .taskfiles/flux.yml
   format: .taskfiles/format.yml
   lint: .taskfiles/lint.yml
   pre-commit: .taskfiles/pre-commit.yml
+  terraform: .taskfiles/terraform.yml
