feat: move kubeconfig to provision folder during ansible k3s-install (#91)
* feat: move kubeconfig to provision folder during ansible k3s-install

Signed-off-by: Devin Buhl <devin.kray@gmail.com>

* fix: update kubeconfig refereces

Signed-off-by: Devin Buhl <devin.kray@gmail.com>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,7 +9,7 @@ vars:
   TERRAFORM_DIR: "{{.PROJECT_DIR}}/provision/terraform"
 
 env:
-  KUBECONFIG: "{{.PROJECT_DIR}}/kubeconfig"
+  KUBECONFIG: "{{.PROJECT_DIR}}/provision/kubeconfig"
 
 includes:
   ansible: .taskfiles/ansible.yml
