--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -10,12 +10,12 @@
       "cluster/.+\\.ya?ml$"
     ],
     "ignorePaths": [
-      "cluster/base/"
+      "cluster/.+/gotk-components\\.ya?ml$"
     ]
   },
   "helm-values": {
     "fileMatch": [
-      "cluster/.+/helm-release\\.ya?ml$"
+      "cluster/.+\\.ya?ml$"
     ]
   },
   "kubernetes": {
@@ -23,7 +23,7 @@
       "cluster/.+\\.ya?ml$"
     ],
     "ignorePaths": [
-      "cluster/base/"
+      "cluster/.+/gotk-components\\.ya?ml$"
     ]
   },
   "regexManagers": [
