--- a/cluster/apps/kube-system/reflector/helm-release.yaml
+++ b/cluster/apps/kube-system/reflector/helm-release.yaml
@@ -15,6 +15,13 @@ spec:
         name: emberstack-charts
         namespace: flux-system
       interval: 5m
+  install:
+    createNamespace: true
+    remediation:
+      retries: 3
+  upgrade:
+    remediation:
+      retries: 3
   values:
     configuration:
       logging:
