--- a/cluster/apps/kube-system/reloader/helm-release.yaml
+++ b/cluster/apps/kube-system/reloader/helm-release.yaml
@@ -15,5 +15,12 @@ spec:
         name: stakater-charts
         namespace: flux-system
       interval: 5m
+  install:
+    createNamespace: true
+    remediation:
+      retries: 3
+  upgrade:
+    remediation:
+      retries: 3
   values:
     fullnameOverride: reloader
