--- a/cluster/apps/networking/traefik/helm-release.yaml
+++ b/cluster/apps/networking/traefik/helm-release.yaml
@@ -18,6 +18,13 @@ spec:
   dependsOn:
     - name: cert-manager
       namespace: cert-manager
+  install:
+    createNamespace: true
+    remediation:
+      retries: 3
+  upgrade:
+    remediation:
+      retries: 3
   values:
     image:
       name: ghcr.io/k8s-at-home/traefik
