--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -14,6 +14,9 @@
     "ghcr.io/fluxcd/notification-controller",
     "ghcr.io/fluxcd/source-controller"
   ],
+  "pre-commit": {
+    "enabled": true
+  },
   "flux": {
     "fileMatch": [
       "cluster/.+\\.ya?ml$"
