fix: Update kube-vip on ansible template as well (#276)

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -32,7 +32,8 @@
   },
   "kubernetes": {
     "fileMatch": [
-      "cluster/.+\\.ya?ml$"
+      "cluster/.+\\.ya?ml$",
+      "provision/ansible/playbooks/templates/.+\\.ya?ml.j2$"
     ]
   },
   "regexManagers": [
