--- a/cluster/core/kube-system/kube-vip/daemon-set.yaml
+++ b/cluster/core/kube-system/kube-vip/daemon-set.yaml
@@ -28,7 +28,7 @@ spec:
             - name: vip_arp
               value: "true"
             - name: vip_interface
-              value: "${BOOTSTRAP_ANSIBLE_KUBE_VIP_INTERFACE}"
+              value: "eno1"
             - name: port
               value: "6443"
             - name: vip_cidr
@@ -40,7 +40,7 @@ spec:
             - name: svc_enable
               value: "false"
             - name: address
-              value: "${BOOTSTRAP_ANSIBLE_KUBE_VIP_ADDRESS}"
+              value: "192.168.1.254"
           securityContext:
             capabilities:
               add:
