--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -6,6 +6,7 @@ metadata:
     namespace: flux-system
 stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:lF2uyMLhydjSb6827E4=,iv:kyoqCt/otabQ5Xftq/fFbDoebicZjlN0IP2ReDBFyEw=,tag:LLEYhQ3OknqHjn8oeFhLpQ==,type:str]
+    CLUSTER_DOMAIN: ENC[AES256_GCM,data:OP601PKSow1npYBV3mc=,iv:UUp7K5xFhlM/Nz/INmmbhB2EmEtWwp17xE2yjHA7nEs=,tag:oIOpjT3Xi9ltCcJhpnaYlQ==,type:str]
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:yE682+csirU7WZ/dbNjVvvMF/Jr2Kg==,iv:XozVKqEroEHAi0HcpaF65SP2M2smT8LzQDQdjPLo1Nw=,tag:R8DVYtaOXJQI3H21ZCjm4g==,type:str]
 sops:
     kms: []
@@ -22,8 +23,8 @@ sops:
             dzJrYzRjYnBnR2E2S0E1MEJIdDB3MncKKmBvG2LCCDxZD1n9cswfopxoGjuQOllc
             +PRx4cL7UyRiRsRj079x8hzCBUrVGTvLMnmV8oos8ikW48kW9IOC0g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-18T06:33:08Z"
-    mac: ENC[AES256_GCM,data:+jPkq5bGwVZ9DTg3xlpA/01FtGAACMCaw5wJpvmIYUisAPZrcSDIRaiEIkxroqWuyfltu/TZrmxw4akHGGTkhB5PQxKVn8AJDWe3IS6Ka/PUlPFEJ6PXYneh+OeUkBcKvDIw85yX//q9d8+LEUjEowWrt15G2ZU93ZoyQLH1UYU=,iv:qBQmeJ7D0wRG+CdHaCaHaAO2AKXoBAUQmEFtiJLynh4=,tag:Ggd5TNMGBuebBy0sY8oqBQ==,type:str]
+    lastmodified: "2022-04-19T04:44:12Z"
+    mac: ENC[AES256_GCM,data:/2Iy5e8BvotQMrYf3G6JOdQ53R2myMsiiamxvng749XBzQS8VjqiVd2n6NWB/+yYNhNv8kSIzXteT2eVH+4QfKzqqqtZXfePxVQB7domqstCSYMkjjvkQWsPzE2VHXjohAQfMaFj4CtD2R4bZ1uhbBciPDr9vsDL38UENYuWCNU=,iv:q/rD7syZcEU1/rgK8VgKLRGoCH2W9KqGYmmAdq3A4kc=,tag:xnmFv0kT+RJDMQJhD+K4lg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
