--- a/cluster/core/kube-system/traefik-forward-auth/helm-release.yaml
+++ b/cluster/core/kube-system/traefik-forward-auth/helm-release.yaml
@@ -13,6 +13,7 @@ spec:
         kind: HelmRepository
         name: k8s-at-home-charts
         namespace: flux-system
+      interval: 5m
   install:
     createNamespace: true
     remediation:
