--- a/cluster/core/kubernetes-dashboard/kustomization.yaml
+++ b/cluster/core/kubernetes-dashboard/kustomization.yaml
@@ -2,5 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kubernetes-dashboard
 resources:
-  - release.yaml
+  - helm-release.yaml
   - cluster-role-binding.yaml
