--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -14,6 +14,7 @@ resources:
   - jetstack-charts.yaml
   - k8s-at-home-charts.yaml
   - k8s-gateway-charts.yaml
+  - kubernetes-dashboard.yaml
   - longhorn-charts.yaml
   - metallb-charts.yaml
   - metrics-server-charts.yaml
