--- a/cluster/apps/default/hajimari/helm-release.yaml
+++ b/cluster/apps/default/hajimari/helm-release.yaml
@@ -32,6 +32,7 @@ spec:
         matchNames:
           - default
           - networking
+          - kubernetes-dashboard
       name: "you"
       customApps:
         - name: Some External Cluster Service
