--- a/cluster/core/kube-system/traefik-forward-auth/helm-release.yaml
+++ b/cluster/core/kube-system/traefik-forward-auth/helm-release.yaml
@@ -31,13 +31,19 @@ spec:
       main:
         enabled: true
         annotations:
+          cert-manager.io/cluster-issuer: letsencrypt-production
           kubernetes.io/ingress.class: traefik
           traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
+          traefik.ingress.kubernetes.io/router.entrypoints: websecure
         hosts:
           - host: "auth.${CLUSTER_DOMAIN}"
             paths:
               - path: /
                 pathType: Prefix
+        tls:
+          - secretName: traefik-forward-auth-tls
+            hosts:
+              - "auth.${CLUSTER_DOMAIN}"
   valuesFrom:
     - kind: Secret
       name: traefik-forward-auth-secrets
