--- a/cluster/base/flux-system/charts/helm/kubernetes-dashboard-charts.yaml
+++ b/cluster/base/flux-system/charts/helm/kubernetes-dashboard-charts.yaml
@@ -1,7 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1beta1
 kind: HelmRepository
 metadata:
-  name: kubernetes-dashboard
+  name: kubernetes-dashboard-charts
   namespace: flux-system
 spec:
   interval: 30m
