--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - cert-manager.yaml
+  - csi-driver-nfs.yaml
   - kubernetes-dashboard.yaml
   - longhorn-system.yaml
   - metallb-system.yaml
