--- a/cluster/core/longhorn-system/helm-release.yaml
+++ b/cluster/core/longhorn-system/helm-release.yaml
@@ -20,6 +20,9 @@ spec:
     remediation:
       retries: 3
   values:
+    persistence:
+      defaultClass: false
+      defaultClassReplicaCount: 2
     ingress:
       enabled: true
       host: "longhorn.${CLUSTER_DOMAIN}"
