--- a/cluster/base/cluster-secrets.sops.yaml
+++ b/cluster/base/cluster-secrets.sops.yaml
@@ -8,6 +8,7 @@ stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:lF2uyMLhydjSb6827E4=,iv:kyoqCt/otabQ5Xftq/fFbDoebicZjlN0IP2ReDBFyEw=,tag:LLEYhQ3OknqHjn8oeFhLpQ==,type:str]
     CLUSTER_DOMAIN: ENC[AES256_GCM,data:OP601PKSow1npYBV3mc=,iv:UUp7K5xFhlM/Nz/INmmbhB2EmEtWwp17xE2yjHA7nEs=,tag:oIOpjT3Xi9ltCcJhpnaYlQ==,type:str]
     SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:yE682+csirU7WZ/dbNjVvvMF/Jr2Kg==,iv:XozVKqEroEHAi0HcpaF65SP2M2smT8LzQDQdjPLo1Nw=,tag:R8DVYtaOXJQI3H21ZCjm4g==,type:str]
+    FS_GROUP: ENC[AES256_GCM,data:pKAhCac=,iv:4HoHkO00HvmFS5mTua0Dhvg7BFiU0uHF8hjIqmLFrVg=,tag:2ZEWCC4UEwHlVakiBAlaKQ==,type:int]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +24,8 @@ sops:
             dzJrYzRjYnBnR2E2S0E1MEJIdDB3MncKKmBvG2LCCDxZD1n9cswfopxoGjuQOllc
             +PRx4cL7UyRiRsRj079x8hzCBUrVGTvLMnmV8oos8ikW48kW9IOC0g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2022-04-19T04:44:12Z"
-    mac: ENC[AES256_GCM,data:/2Iy5e8BvotQMrYf3G6JOdQ53R2myMsiiamxvng749XBzQS8VjqiVd2n6NWB/+yYNhNv8kSIzXteT2eVH+4QfKzqqqtZXfePxVQB7domqstCSYMkjjvkQWsPzE2VHXjohAQfMaFj4CtD2R4bZ1uhbBciPDr9vsDL38UENYuWCNU=,iv:q/rD7syZcEU1/rgK8VgKLRGoCH2W9KqGYmmAdq3A4kc=,tag:xnmFv0kT+RJDMQJhD+K4lg==,type:str]
+    lastmodified: "2022-04-19T19:07:57Z"
+    mac: ENC[AES256_GCM,data:vEJ1e6kCSIMLuY+6iBc/N4gz7LVskL85BfN5QzFrLj+U+8q2akBhl6Oa6zlX5Y/0YREim+lnI7p4hMT5arQDlfnSC+IxKcb6FF4DjGmEQFWM4DJZu6Lf15pD8+ey+unUeBP8RofA1hbTBPKdz5TjxWLln9jtC8bcoBM5+nmLYX4=,iv:egauxrFfza5mP8FPs54cZ1vByxqj+jdqYbSXr6jEKFI=,tag:O11bA51E0CuPj97Y6KRAPw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.2
