--- a/cluster/core/media/kustomization.yaml
+++ b/cluster/core/media/kustomization.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: csi-driver-nfs
+namespace: media
 resources:
   - persistent-volume.yaml
   - persistent-volume-claim.yaml
