--- a/cluster/apps/media/overseerr/helm-release.yaml
+++ b/cluster/apps/media/overseerr/helm-release.yaml
@@ -7,6 +7,8 @@ spec:
   interval: 5m
   chart:
     spec:
+      # renovate: registryUrl=https://k8s-at-home.com/charts/
+      version: 5.2.0
       chart: overseerr
       sourceRef:
         kind: HelmRepository
@@ -22,6 +24,7 @@ spec:
       retries: 3
   values:
     image:
+      repository: ghcr.io/k8s-at-home/overseerr
       tag: "1.29.1"
     ingress:
       enabled: true
@@ -45,6 +48,7 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        accessMode: ReadWriteMany
       media:
         enabled: true
         existing-claim: media-pv-claim
