--- a/cluster/apps/media/radarr/helm-release.yaml
+++ b/cluster/apps/media/radarr/helm-release.yaml
@@ -7,6 +7,8 @@ spec:
   interval: 5m
   chart:
     spec:
+      # renovate: registryUrl=https://k8s-at-home.com/charts/
+      version: 16.1.0
       chart: radarr
       sourceRef:
         kind: HelmRepository
@@ -22,6 +24,7 @@ spec:
       retries: 3
   values:
     image:
+      repository: ghcr.io/k8s-at-home/radarr
       tag: "v4.1.0.6175"
     ingress:
       enabled: true
@@ -44,6 +47,7 @@ spec:
       config:
         enabled: true
         storageClass: longhorn
+        accessMode: ReadWriteMany
       media:
         enabled: true
         existing-claim: media-pv-claim
