--- a/cluster/apps/media/kustomization.yaml
+++ b/cluster/apps/media/kustomization.yaml
@@ -4,12 +4,12 @@ kind: Kustomization
 namespace: media
 resources:
   - bazarr
-  - lidarr
-  - nzbget
-  - overseerr
-  - prowlarr
-  - qbittorrent
-  - radarr
-  - radarr-4k
-  - readarr
-  - sonarr
+  # - lidarr
+  # - nzbget
+  # - overseerr
+  # - prowlarr
+  # - qbittorrent
+  # - radarr
+  # - radarr-4k
+  # - readarr
+  # - sonarr
