--- a/cluster/apps/media/nzbget/helm-release.yaml
+++ b/cluster/apps/media/nzbget/helm-release.yaml
@@ -25,31 +25,32 @@ spec:
   values:
     image:
       repository: ghcr.io/k8s-at-home/nzbget
-      tag: "v21.1"
+      tag: v21.1
     ingress:
-      enabled: true
-      annotations:
-        cert-manager.io/cluster-issuer: "letsencrypt-production"
-        hajimari.io/enable: "true"
-        hajimari.io/icon: "account-arrow-down"
-        kubernetes.io/ingress.class: "traefik"
-        traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-        traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
-      hosts:
-        - host: "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
-          paths:
-            - "/"
-      tls:
-        - secretName: "{{ .Release.Name }}-tls"
-          hosts:
-            - "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
+      main:
+        enabled: true
+        annotations:
+          cert-manager.io/cluster-issuer: letsencrypt-production
+          hajimari.io/enable: "true"
+          hajimari.io/icon: account-arrow-down
+          kubernetes.io/ingress.class: traefik
+          traefik.ingress.kubernetes.io/router.entrypoints: websecure
+          traefik.ingress.kubernetes.io/router.middlewares: kube-system-traefik-forward-auth@kubernetescrd
+        hosts:
+          - host: "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
+        tls:
+          - secretName: "{{ .Release.Name }}-tls"
+            hosts:
+              - "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
     persistence:
       config:
         enabled: true
         storageClass: longhorn
-        accessMode: ReadWriteMany
       media:
         enabled: true
-        existing-claim: media-pv-claim
+        existingClaim: media-pv-claim
     podSecurityContext:
-      fsGroup: "${FS_GROUP}"
+      fsGroup: ${FS_GROUP}
