--- a/cluster/apps/media/unpackerr/helm-release.yaml
+++ b/cluster/apps/media/unpackerr/helm-release.yaml
@@ -2,14 +2,14 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: tautulli
+  name: unpackerr
 spec:
   interval: 5m
   chart:
     spec:
       # renovate: registryUrl=https://k8s-at-home.com/charts/
-      version: 11.2.0
-      chart: tautulli
+      version: 5.2.0
+      chart: unpackerr
       sourceRef:
         kind: HelmRepository
         name: k8s-at-home-charts
@@ -25,7 +25,7 @@ spec:
   values:
     image:
       repository: ghcr.io/k8s-at-home/unpackerr
-      tag: v2.7.7
+      tag: 0.9.7
     persistence:
       media:
         enabled: true
