--- a/cluster/apps/media/unpackerr/helm-release.yaml
+++ b/cluster/apps/media/unpackerr/helm-release.yaml
@@ -24,7 +24,7 @@ spec:
       retries: 3
   values:
     image:
-      repository: ghcr.io/k8s-at-home/unpackerr
+      repository: golift/unpackerr
       tag: 0.9.7
     persistence:
       media:
