--- a/provision/ansible/inventory/hosts.yml
+++ b/provision/ansible/inventory/hosts.yml
@@ -5,3 +5,7 @@ kubernetes:
       hosts:
         k8s-0:
           ansible_host: 192.168.1.200
+    worker:
+      hosts:
+        k8s-1:
+          ansible_host: 192.168.1.201
